--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -20,6 +20,8 @@ header a:visited{ color:white;text-decoration:none;}
 
 .center {
   text-align: center;
+  margin-left: 40px;
+  margin-right: 40px;
 }
 
 .center h1 {
@@ -61,6 +63,9 @@ list-style: none;
 margin-right: 20px;
 }
 
+.container {
+
+}
 
 h1, h2, h3, h4, h5, h6 {
   line-height: 1;
@@ -143,4 +148,88 @@ ul {
 ul li {
   float: left;
   margin-left: 10px;
+}
+
+
+
+
+$grayMediumLight: #eaeaea;
+
+@mixin box_sizing {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+/* miscellaneous */
+
+.debug_dump {
+  clear: both;
+  float: left;
+  width: 100%;
+  margin-top: 45px;
+  @include box_sizing;
+  background-color: #BEBEBE
+}
+
+/* sidebar */
+
+aside {
+  section {
+    padding: 10px 0;
+    border-top: 1px solid $grayMediumLight;
+    &:first-child {
+      border: 0;
+      padding-top: 0;
+    }
+    span {
+      display: block;
+      margin-bottom: 3px;
+      line-height: 1;
+    }
+    h1 {
+      font-size: 1.6em;
+      text-align: left;
+      letter-spacing: -1px;
+      margin-bottom: 3px;
+    }
+  }
+}
+
+.gravatar {
+  float: left;
+  margin-right: 10px;
+}
+
+/* forms */
+
+
+.span6 {
+  margin-left: 50px;
+  margin-left: 50px;
+}
+
+input, textarea, select, .uneditable-input {
+  
+  border: 1px solid #C4E1FF;
+  width: 100%;
+  padding: 10px;
+  height: auto !important;
+  margin-bottom: 15px;
+  @include box_sizing;
+}
+
+.btn {
+  width: 25%;
+  /*background-color: blue;*/
+}
+
+
+#error_explanation {
+  color: #f00;
+  ul {
+    list-style: none;
+    margin: 0 0 18px 0;
+
+  }
 }
