--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,14 +1,14 @@
-<header class="navbar">
+<header class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container">
       <%= link_to "sample app", '#', id: "logo" %>
-      
-        <ul class="nav">
-          <li><%= link_to "首页", root_path %></li>
-          <li><%= link_to "帮助", help_path %></li>
-          <li><%= link_to "登录", '#' %></li>
+      <nav>
+        <ul class="nav pull-right">
+          <li><%= link_to "Home",    root_path %></li>
+          <li><%= link_to "Help",    help_path %></li>
+          <li><%= link_to "Sign in", '#' %></li>
         </ul>
-      
+      </nav>
     </div>
   </div>
 </header>
