Add user microposts

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -191,6 +191,10 @@ aside {
     padding: 10px 0;
     border-top: 1px solid #e8e8e8;
   }
+
+  img {
+    width: 60px;
+  }
 }
 .content {
   display: block;
@@ -208,3 +212,4 @@ aside {
     margin-bottom: 5px;
   }
 }
+
